Fix wall gap inverval and sprite z-index (#17)
* Fix wall gap inverval and sprite z-index

* Add score board layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-overflow: hidden;
+    overflow: hidden;
 }
 
 #game-box {
@@ -19,47 +19,62 @@ overflow: hidden;
     display: cover;
 }
 
+/* ---------- Score at the top of the game ----------*/
+#game-info {
+    position: absolute;
+    background-color: rgb(39, 44, 49);
+    height: 45px;
+    width: 892px;
+    color: #fff;
+    font-weight: 600;
+    margin-left: 0px;
+
+
+}
+
 .walls {
     width: 60px;
-    height: 100%;
+    height: 700px;
     left: 900px;
     background: url("../img/hedge.jpg") repeat;
     display: cover;
     position: relative;
     animation: walls 2.5s infinite linear;
+    vertical-align: top;
+    z-index: 1;
+    margin-top: 0;
 }
 
 @keyframes walls {
     0% {
-        left: 860px
+        left: 850px
     }
 
     100% {
-        left: -200px
+        left: -60px
     }
 }
 
+/* --------- Gap in the ----------*/
 .gap {
     background: rgb(102, 98, 98) repeat;
-    /* margin-top: 400px; */
+    margin-top: 400px;
     width: 60px;
-    /* height: 100px; */
+    height: 100px;
     position: absolute;
-}
+    z-index: 1;
 
-#character {
-    width: 40px;
-    height: 60px;
-    top: 300px;
-    left: 25px;
-    background: url("../img/sprite3.png") no-repeat center;
-    position: relative;
 }
 
 
-#sprite > img{
-   width: 45px; 
-   height: 45px;
-   top: 350px;
-   left: 0;
-   }
+#sprite {
+    z-index: 2;
+}
+
+#sprite>img {
+    width: 45px;
+    height: 45px;
+    top: 350px;
+    left: 0;
+    display: hidden;
+}
